--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gallery</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Goit-js-hw-12</title>
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
+
+<body>
+
+  <main>
     <form class="form">
       <label>
-        <input class="input-search" type="text" name="search-text" placeholder="Search images..." required>
+        <input type="text" name="search-text" placeholder="Search images..." required>
       </label>
-      <button type="submit" class="btn-search">Search</button>
+      <button type="submit">Search</button>
     </form>
-    <div class="container">
-      <span class="loader"></span>
-      <ul class="gallery"></ul>
-    </div>
-    <script type="module" src="./main.js"></script>
-  </body>
+    <ul class="gallery"></ul>
+    <button type="button" class="load-more">Load more</button>
+    <span class="loader"></span>
+  </main>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/iziToast/dist/js/iziToast.min.js"></script>
+  <script type="module" src="./main.js" defer></script>
+</body>
+
 </html>
